--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "dependencies": {
     "node-omxplayer": "^0.6.1",
-    "typescript": "^3.8.3",
-    "vlc": "0.0.4"
+    "omxconductor": "^0.3.0",
+    "omxplayer-dbus": "^1.0.10",
+    "tslib": "^1.11.1",
+    "typescript": "^3.8.3"
   }
 }
