--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   },
   "homepage": "https://github.com/eddiecarbin/MontereyRiverPanel#readme",
   "devDependencies": {
-    "electron": "^8.1.1"
+    "electron": "^8.1.1",
+    "electron-rebuild": "^1.10.1"
   },
   "dependencies": {
     "node-omxplayer": "^0.6.1",
     "omxconductor": "^0.3.0",
     "omxplayer-dbus": "^1.0.10",
+    "onoff": "^5.0.1",
     "tslib": "^1.11.1",
     "typescript": "^3.8.3"
   }
